--- a/pom.xml
+++ b/pom.xml
@@ -66,4 +66,24 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <tagNameFormat>v@{version}</tagNameFormat>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <scm>
+        <connection>scm:git:git@github.com:pokebadgerswithspoon/FSM</connection>
+        <url>scm:git:git@github.com:pokebadgerswithspoon/FSM</url>
+        <developerConnection>scm:git:git@github.com:pokebadgerswithspoon/FSM</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
