[maven-release-plugin] prepare release v0.0.5

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.pbws.fsm</groupId>
     <artifactId>fsm</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.5</version>
     <description>Finite state machine</description>
     <dependencies>
         <dependency>
@@ -84,6 +83,6 @@
         <connection>scm:git:git@github.com:pokebadgerswithspoon/FSM</connection>
         <url>scm:git:git@github.com:pokebadgerswithspoon/FSM</url>
         <developerConnection>scm:git:git@github.com:pokebadgerswithspoon/FSM</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v0.0.5</tag>
     </scm>
 </project>
